# ROOTEGPythia6

./: CMakeLists.txt  README.md
cmake/Modules/: FindPythia6.cmake
cmake/Templates/: ROOTEGPythia6-config.in
pythia6/: README.md
